Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL)
Description
Optimizer trace doesn't mention LATERAL DERIVED optimization. This can be extra confusing because LATERAL DERIVED code invokes parts of join optimizer that do the tracing.
This task is about
- figuring out what to trace/log
- do it.
Attachments
Issue Links
- blocks
-
MDEV-30876 Back port LATERAL DERIVED coverage in optimizer trace
-
- Closed
-
- relates to
-
MDEV-26300 LATERAL DERIVED: Optimizer trace insufficient, odd computations
-
- Confirmed
-