MDEV-24325: Optimizer trace doesn't cover LATERAL DERIVED

(cherry-pick into 10.5)
Provide basic coverage in the Optimizer Trace